--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "alakirql",
+  "type": "module",
   "version": "1.0.0",
   "private": true,
   "description": "DSL for astrology",
@@ -7,7 +8,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "rimraf dist && tsc --build tsconfig.build.json",
+    "build": "rimraf dist && swc -d dist src && resolve-tspaths",
     "test": "vitest run",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
@@ -23,18 +24,25 @@
   "author": "prenaissance",
   "license": "ISC",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.35",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4",
+    "resolve-tspaths": "^0.8.8",
     "rimraf": "^4.1.2",
     "typescript": "^4.9.5",
-    "vite": "^4.1.1",
+    "vite": "^4.1.2",
     "vite-tsconfig-paths": "^4.0.5",
-    "vitest": "^0.28.4"
+    "vitest": "^0.28.5"
+  },
+  "dependencies": {
+    "-": "^0.0.1",
+    "@types/node": "^18.14.0"
   }
 }
