--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   "license": "ISC",
   "devDependencies": {
     "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.35",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "eslint": "^8.34.0",
+    "@swc/core": "^1.3.36",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "@vitest/coverage-c8": "^0.29.1",
+    "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
@@ -37,12 +38,12 @@
     "resolve-tspaths": "^0.8.8",
     "rimraf": "^4.1.2",
     "typescript": "^4.9.5",
-    "vite": "^4.1.2",
+    "vite": "^4.1.4",
     "vite-tsconfig-paths": "^4.0.5",
-    "vitest": "^0.28.5"
+    "vitest": "^0.29.1"
   },
   "dependencies": {
     "-": "^0.0.1",
-    "@types/node": "^18.14.0"
+    "@types/node": "^18.14.2"
   }
 }
