--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: test-coverage
-          path: ./coverage
+          path: "**/coverage"
 
   coverage:
     needs: test
@@ -123,7 +123,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: test-coverage
-          path: ./coverage
+          path: "**./coverage"
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
