--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4",
+    "turbo": "^1.8.3",
     "typescript": "^4.9.5"
   }
 }
