--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,8 +6,20 @@
   "files": [
     "dist"
   ],
+  "exports": {
+    "./lexer": {
+      "import": "./dist/lexer/index.js",
+      "require": "./dist/lexer/index.cjs",
+      "types": "./dist/lexer/index.d.ts"
+    },
+    "./parser": {
+      "import": "./dist/parser/index.js",
+      "require": "./dist/parser/index.js.cjs",
+      "types": "./dist/parser/index.d.ts"
+    }
+  },
   "scripts": {
-    "build": "rimraf dist && swc -d dist src && resolve-tspaths",
+    "build": "tsup src --dts --format esm,cjs --external config --clean",
     "test": "vitest run",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage"
@@ -22,13 +34,10 @@
   "author": "prenaissance",
   "license": "ISC",
   "devDependencies": {
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.36",
     "@types/node": "^18.14.2",
     "@vitest/coverage-c8": "^0.29.1",
     "config": "workspace:*",
-    "resolve-tspaths": "^0.8.8",
-    "rimraf": "^4.1.2",
+    "tsup": "^6.6.3",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
     "vite-tsconfig-paths": "^4.0.5",
