--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,19 +6,11 @@
   "files": [
     "dist"
   ],
-  "exports": {
-    "./lexer": {
-      "import": "./dist/lexer/index.js",
-      "require": "./dist/lexer/index.cjs",
-      "types": "./dist/lexer/index.d.ts"
-    },
-    "./parser": {
-      "import": "./dist/parser/index.js",
-      "require": "./dist/parser/index.js.cjs",
-      "types": "./dist/parser/index.d.ts"
-    }
-  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "clean": "rimraf dist",
     "build": "tsup src --dts --format esm,cjs --external config --clean",
     "test": "vitest run",
     "test:watch": "vitest watch",
@@ -37,6 +29,7 @@
     "@types/node": "^18.14.2",
     "@vitest/coverage-c8": "^0.29.1",
     "config": "workspace:*",
+    "rimraf": "^4.3.1",
     "tsup": "^6.6.3",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
