--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,24 +2,32 @@
   "name": "@alakir/cli",
   "version": "1.0.0",
   "description": "alakirql cli",
-  "bin": "dist/index.js",
+  "bin": {
+    "alakir": "dist/index.js"
+  },
   "files": [
     "dist"
   ],
   "type": "module",
   "scripts": {
-    "build": "tsup src --format esm --clean"
+    "build": "tsup src/index.ts --format esm --clean --splitting --external config",
+    "build:watch": "pnpm run build --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@alakir/core": "workspace:*",
+    "chalk": "^5.2.0",
     "commander": "^10.0.0",
-    "config": "workspace:*"
+    "figlet": "^1.5.2",
+    "gradient-string": "^2.0.2"
   },
   "devDependencies": {
+    "@types/figlet": "^1.5.5",
+    "@types/gradient-string": "^1.1.2",
     "@types/node": "^18.14.2",
+    "config": "workspace:*",
     "tsup": "^6.6.3",
     "typescript": "^4.9.5"
   }
