--- a/turbo.json
+++ b/turbo.json
@@ -1,25 +1,43 @@
 {
-    "$schema": "https://turbo.build/schema.json",
-    "pipeline": {
-        "build": {
-            "outputs": [
-                "dist"
-            ]
-        },
-        "test": {
-            "inputs": [
-                "src/**/*.ts",
-                "tests/**/*spec.ts"
-            ]
-        },
-        "test:coverage": {
-            "inputs": [
-                "src/**/*.ts",
-                "tests/**/*spec.ts"
-            ],
-            "outputs": [
-                "coverage"
-            ]
-        }
+  "$schema": "https://turbo.build/schema.json",
+  "pipeline": {
+    "build": {
+      "outputs": [
+        "dist"
+      ]
+    },
+    "build-types": {
+      "inputs": [
+        "src/**/*.ts"
+      ],
+      "outputs": [
+        "dist"
+      ],
+      "dependsOn": [
+        "build"
+      ]
+    },
+    "build:watch": {
+      "outputs": [
+        "dist"
+      ],
+      "cache": false,
+      "persistent": true
+    },
+    "test": {
+      "inputs": [
+        "src/**/*.ts",
+        "tests/**/*spec.ts"
+      ]
+    },
+    "test:coverage": {
+      "inputs": [
+        "src/**/*.ts",
+        "tests/**/*spec.ts"
+      ],
+      "outputs": [
+        "coverage"
+      ]
     }
+  }
 }
