--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,5 +25,10 @@ jobs:
         with:
           run_install: false
           version: 7
+      - name: Download build artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+          path: .
       - name: Publish packages
         run: pnpm publish --recursive
